tests/cli/snapshots/read_snapshots_test__get_json.snap
---
source: tests/cli/read_snapshots_test.rs
expression: read_output(&args)
---
{
  "ok": true,
  "command": "get",
  "workbook": "tests/fixtures/xmind/minimal.xmind",
  "dry_run": false,
  "applied": false,
  "result": {
    "topic": {
      "children": [],
      "id": "topic-payment",
      "labels": [],
      "markers": [],
      "path": "/Q2/Payment",
      "title": "Payment"
    }
  },
  "warnings": []
}
